# bunchOfCode

./: .gitignore  a.out
CodeCourse/: SomeArth.cpp  inheritence.cpp  inputManage.cpp  polymorphism.cpp  protected_inheritance.cpp  score.cpp  vec_cal.cpp
CodeCourse/codeExam/array/: a.out  array_thing.cpp
CodeCourse/codeExam/compare_two_int/: main.cpp
CodeCourse/codeExam/read_eight_worlds_with_iterator/: iter.cpp
CodeCourse/codeExam/student_record/: student_record.cpp
OOP/Car/Go/: Car.go
OOP/Car/Java/: Car.java
OOP/Car/Python/: Car.py
OOP/Car/Rust/: Car  Car.rs
OOP/Car/Ts/: Car.js  Car.ts
OOP/CoffeeMachine/Python/: CoffeeMachine.py
OOP/CoffeeMachine/Rust/: main.rs
OOP/CoffeeMachine/Ts/: CoffeeMachine.ts
OOP/Student/: student.cpp
codeExam/compare_two_int/: a.out  comparison.cpp  comparison.h
codeExam/read_eight_worlds_with_iterator/: a.out
codeExam/stringEdit/: a.out  string_edit.cpp
codeExam/student_record/: a.out
momentum-quant/: Cargo.toml
momentum-quant/src/: main.rs
movebook_test/movebook/: Move.toml
some-example/: main.rs  momentum.rs
sui-grpc-bench/: Cargo.toml  build.rs
sui-grpc-bench/src/: main.rs
sui-grpc-ts/: .gitignore  client.ts  client_api.ts  momentum.rs  package.json  pb.rs  pnpm-lock.yaml  suigRPC.ts
sui-grpc-ts/tx/: momentum_create_pool.ts  momentum_trade_clean.ts  test_tx.ts
sui_trade_stuff/sui-grpc-bench/: Cargo.toml  build.rs
sui_trade_stuff/sui-grpc-bench/src/: main.rs
sui_trade_stuff/sui-grpc-ts/: .gitignore  client.ts  client_jrpc.ts  package.json  suigRPC.ts
(+6 files in other folders)
