[package]
name = "sui-grpc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
